crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__text.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\\\"Hello, world!\\\"\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "Hello, world!",
                                            1..14,
                                        ),
                                    ),
                                    1..14,
                                ),
                            ],
                        ),
                        0..15,
                    ),
                ),
                0..15,
            ),
        ),
        0..15,
    ),
]
