crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__token_at_end.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"let x\")"
---
[
    (
        Token(
            "let",
        ),
        0..3,
    ),
    (
        Token(
            "x",
        ),
        4..5,
    ),
]
