crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__unclosed_command.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"$echo test\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "echo test",
        ),
        1..10,
    ),
]
