crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__unclosed_string.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(r#\"\"unclosed\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "unclosed",
        ),
        1..9,
    ),
]
