crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__var_init-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"let a = 10 + 2\"))"
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        0..3,
                    ),
                    (
                        "a",
                        4..5,
                    ),
                    (
                        Expression(
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                10.0,
                                                8..10,
                                            ),
                                        ),
                                        8..10,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                13..14,
                                            ),
                                        ),
                                        13..14,
                                    ),
                                ),
                                8..14,
                            ),
                        ),
                        8..14,
                    ),
                ),
                0..14,
            ),
        ),
        0..14,
    ),
]
