crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__var_set-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"a = 10 + 2\").unwrap()"
---
[
    (
        Statement(
            (
                VariableSet(
                    (
                        "a",
                        0..1,
                    ),
                    (
                        Add(
                            (
                                Number(
                                    (
                                        10.0,
                                        4..6,
                                    ),
                                ),
                                4..6,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        9..10,
                                    ),
                                ),
                                9..10,
                            ),
                        ),
                        4..10,
                    ),
                ),
                0..10,
            ),
        ),
        0..10,
    ),
]
