crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__var_set.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"a = 10\").unwrap()"
---
[
    (
        Statement(
            (
                VariableSet(
                    (
                        "a",
                        0..1,
                    ),
                    (
                        Number(
                            (
                                10.0,
                                4..6,
                            ),
                        ),
                        4..6,
                    ),
                ),
                0..6,
            ),
        ),
        0..6,
    ),
]
