crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__variable_get-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"name1\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Var(
                            (
                                "name1",
                                0..5,
                            ),
                        ),
                        0..5,
                    ),
                ),
                0..5,
            ),
        ),
        0..5,
    ),
]
