crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__variable_get-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"name_1_\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Var(
                            (
                                "name_1_",
                                0..7,
                            ),
                        ),
                        0..7,
                    ),
                ),
                0..7,
            ),
        ),
        0..7,
    ),
]
